frame/support/test/tests/pallet_ui/step_021.stderr
error[E0107]: wrong number of type arguments: expected 1, found 0
  --> $DIR/step_021.rs:12:17
   |
12 |     impl<T: Trait> ModuleInterface for Module<T> {}
   |                    ^^^^^^^^^^^^^^^ expected 1 type argument
